demo/generated/MParser.cpp

// Generated from M.g4 by ANTLR 4.7.1


#include "MListener.h"
#include "MVisitor.h"

#include "MParser.h"


using namespace antlrcpp;
using namespace antlrcpptest;
using namespace antlr4;

MParser::MParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

MParser::~MParser() {
  delete _interpreter;
}

std::string MParser::getGrammarFileName() const {
  return "M.g4";
}

const std::vector<std::string>& MParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& MParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

MParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* MParser::ProgramContext::EOF() {
  return getToken(MParser::EOF, 0);
}

std::vector<MParser::ProgramSectionContext *> MParser::ProgramContext::programSection() {
  return getRuleContexts<MParser::ProgramSectionContext>();
}

MParser::ProgramSectionContext* MParser::ProgramContext::programSection(size_t i) {
  return getRuleContext<MParser::ProgramSectionContext>(i);
}


size_t MParser::ProgramContext::getRuleIndex() const {
  return MParser::RuleProgram;
}

void MParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void MParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any MParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

MParser::ProgramContext* MParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, MParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(51);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MParser::Bool)
      | (1ULL << MParser::Int)
      | (1ULL << MParser::Void)
      | (1ULL << MParser::String)
      | (1ULL << MParser::Class)
      | (1ULL << MParser::Identifier))) != 0)) {
      setState(48);
      programSection();
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(54);
    match(MParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramSectionContext ------------------------------------------------------------------

MParser::ProgramSectionContext::ProgramSectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MParser::ClassDeclarationContext* MParser::ProgramSectionContext::classDeclaration() {
  return getRuleContext<MParser::ClassDeclarationContext>(0);
}

MParser::FunctionDeclarationContext* MParser::ProgramSectionContext::functionDeclaration() {
  return getRuleContext<MParser::FunctionDeclarationContext>(0);
}

MParser::VariableDeclarationContext* MParser::ProgramSectionContext::variableDeclaration() {
  return getRuleContext<MParser::VariableDeclarationContext>(0);
}


size_t MParser::ProgramSectionContext::getRuleIndex() const {
  return MParser::RuleProgramSection;
}

void MParser::ProgramSectionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgramSection(this);
}

void MParser::ProgramSectionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgramSection(this);
}


antlrcpp::Any MParser::ProgramSectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MVisitor*>(visitor))
    return parserVisitor->visitProgramSection(this);
  else
    return visitor->visitChildren(this);
}

MParser::ProgramSectionContext* MParser::programSection() {
  ProgramSectionContext *_localctx = _tracker.createInstance<ProgramSectionContext>(_ctx, getState());
  enterRule(_localctx, 2, MParser::RuleProgramSection);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(59);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(56);
      classDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(57);
      functionDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(58);
      variableDeclaration();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

MParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MParser::BlockStatementContext* MParser::StatementContext::blockStatement() {
  return getRuleContext<MParser::BlockStatementContext>(0);
}

MParser::ExpressionStatementContext* MParser::StatementContext::expressionStatement() {
  return getRuleContext<MParser::ExpressionStatementContext>(0);
}

MParser::SelectionStatementContext* MParser::StatementContext::selectionStatement() {
  return getRuleContext<MParser::SelectionStatementContext>(0);
}

MParser::IterationStatementContext* MParser::StatementContext::iterationStatement() {
  return getRuleContext<MParser::IterationStatementContext>(0);
}

MParser::JumpStatementContext* MParser::StatementContext::jumpStatement() {
  return getRuleContext<MParser::JumpStatementContext>(0);
}


size_t MParser::StatementContext::getRuleIndex() const {
  return MParser::RuleStatement;
}

void MParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void MParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}


antlrcpp::Any MParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

MParser::StatementContext* MParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 4, MParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case MParser::LBrace: {
        enterOuterAlt(_localctx, 1);
        setState(61);
        blockStatement();
        break;
      }

      case MParser::New:
      case MParser::Plus:
      case MParser::Minus:
      case MParser::Not:
      case MParser::Tilde:
      case MParser::PlusPlus:
      case MParser::MinusMinus:
      case MParser::LParen:
      case MParser::Semi:
      case MParser::NullLiteral:
      case MParser::BoolConstant:
      case MParser::IntegerConstant:
      case MParser::StringLiteral:
      case MParser::Identifier: {
        enterOuterAlt(_localctx, 2);
        setState(62);
        expressionStatement();
        break;
      }

      case MParser::If: {
        enterOuterAlt(_localctx, 3);
        setState(63);
        selectionStatement();
        break;
      }

      case MParser::For:
      case MParser::While: {
        enterOuterAlt(_localctx, 4);
        setState(64);
        iterationStatement();
        break;
      }

      case MParser::Break:
      case MParser::Continue:
      case MParser::Return: {
        enterOuterAlt(_localctx, 5);
        setState(65);
        jumpStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockStatementContext ------------------------------------------------------------------

MParser::BlockStatementContext::BlockStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MParser::BlockItemContext *> MParser::BlockStatementContext::blockItem() {
  return getRuleContexts<MParser::BlockItemContext>();
}

MParser::BlockItemContext* MParser::BlockStatementContext::blockItem(size_t i) {
  return getRuleContext<MParser::BlockItemContext>(i);
}


size_t MParser::BlockStatementContext::getRuleIndex() const {
  return MParser::RuleBlockStatement;
}

void MParser::BlockStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockStatement(this);
}

void MParser::BlockStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockStatement(this);
}


antlrcpp::Any MParser::BlockStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MVisitor*>(visitor))
    return parserVisitor->visitBlockStatement(this);
  else
    return visitor->visitChildren(this);
}

MParser::BlockStatementContext* MParser::blockStatement() {
  BlockStatementContext *_localctx = _tracker.createInstance<BlockStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, MParser::RuleBlockStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(MParser::LBrace);
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MParser::Bool)
      | (1ULL << MParser::Int)
      | (1ULL << MParser::Void)
      | (1ULL << MParser::String)
      | (1ULL << MParser::If)
      | (1ULL << MParser::For)
      | (1ULL << MParser::While)
      | (1ULL << MParser::Break)
      | (1ULL << MParser::Continue)
      | (1ULL << MParser::Return)
      | (1ULL << MParser::New)
      | (1ULL << MParser::Plus)
      | (1ULL << MParser::Minus)
      | (1ULL << MParser::Not)
      | (1ULL << MParser::Tilde)
      | (1ULL << MParser::PlusPlus)
      | (1ULL << MParser::MinusMinus)
      | (1ULL << MParser::LParen)
      | (1ULL << MParser::LBrace)
      | (1ULL << MParser::Semi)
      | (1ULL << MParser::NullLiteral)
      | (1ULL << MParser::BoolConstant)
      | (1ULL << MParser::IntegerConstant)
      | (1ULL << MParser::StringLiteral)
      | (1ULL << MParser::Identifier))) != 0)) {
      setState(69);
      blockItem();
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(75);
    match(MParser::RBrace);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockItemContext ------------------------------------------------------------------

MParser::BlockItemContext::BlockItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MParser::VariableDeclarationContext* MParser::BlockItemContext::variableDeclaration() {
  return getRuleContext<MParser::VariableDeclarationContext>(0);
}

MParser::StatementContext* MParser::BlockItemContext::statement() {
  return getRuleContext<MParser::StatementContext>(0);
}


size_t MParser::BlockItemContext::getRuleIndex() const {
  return MParser::RuleBlockItem;
}

void MParser::BlockItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlockItem(this);
}

void MParser::BlockItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlockItem(this);
}


antlrcpp::Any MParser::BlockItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MVisitor*>(visitor))
    return parserVisitor->visitBlockItem(this);
  else
    return visitor->visitChildren(this);
}

MParser::BlockItemContext* MParser::blockItem() {
  BlockItemContext *_localctx = _tracker.createInstance<BlockItemContext>(_ctx, getState());
  enterRule(_localctx, 8, MParser::RuleBlockItem);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(79);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(77);
      variableDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(78);
      statement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionStatementContext ------------------------------------------------------------------

MParser::ExpressionStatementContext::ExpressionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MParser::ExpressionContext* MParser::ExpressionStatementContext::expression() {
  return getRuleContext<MParser::ExpressionContext>(0);
}


size_t MParser::ExpressionStatementContext::getRuleIndex() const {
  return MParser::RuleExpressionStatement;
}

void MParser::ExpressionStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpressionStatement(this);
}

void MParser::ExpressionStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpressionStatement(this);
}


antlrcpp::Any MParser::ExpressionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MVisitor*>(visitor))
    return parserVisitor->visitExpressionStatement(this);
  else
    return visitor->visitChildren(this);
}

MParser::ExpressionStatementContext* MParser::expressionStatement() {
  ExpressionStatementContext *_localctx = _tracker.createInstance<ExpressionStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, MParser::RuleExpressionStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << MParser::New)
      | (1ULL << MParser::Plus)
      | (1ULL << MParser::Minus)
      | (1ULL << MParser::Not)
      | (1ULL << MParser::Tilde)
      | (1ULL << MParser::PlusPlus)
      | (1ULL << MParser::MinusMinus)
      | (1ULL << MParser::LParen)
      | (1ULL << MParser::NullLiteral)
      | (1ULL << MParser::BoolConstant)
      | (1ULL << MParser::IntegerConstant)
      | (1ULL << MParser::StringLiteral)
      | (1ULL << MParser::Identifier))) != 0)) {
      setState(81);
      expression(0);
    }
    setState(84);
    match(MParser::Semi);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectionStatementContext ------------------------------------------------------------------

MParser::SelectionStatementContext::SelectionStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MParser::ExpressionContext* MParser::SelectionStatementContext::expression() {
  return getRuleContext<MParser::ExpressionContext>(0);
}

std::vector<MParser::StatementContext *> MParser::SelectionStatementContext::statement() {
  return getRuleContexts<MParser::StatementContext>();
}

MParser::StatementContext* MParser::SelectionStatementContext::statement(size_t i) {
  return getRuleContext<MParser::StatementContext>(i);
}


size_t MParser::SelectionStatementContext::getRuleIndex() const {
  return MParser::RuleSelectionStatement;
}

void MParser::SelectionStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSelectionStatement(this);
}

void MParser::SelectionStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSelectionStatement(this);
}


antlrcpp::Any MParser::SelectionStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MVisitor*>(visitor))
    return parserVisitor->visitSelectionStatement(this);
  else
    return visitor->visitChildren(this);
}

MParser::SelectionStatementContext* MParser::selectionStatement() {
  SelectionStatementContext *_localctx = _tracker.createInstance<SelectionStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, MParser::RuleSelectionStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(MParser::If);
    setState(87);
    match(MParser::LParen);
    setState(88);
    expression(0);
    setState(89);
    match(MParser::RParen);
    setState(90);
    statement();
    setState(93);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      setState(91);
      dynamic_cast<SelectionStatementContext *>(_localctx)->iselse = match(MParser::T__0);
      setState(92);
      statement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IterationStatementContext ------------------------------------------------------------------

MParser::IterationStatementContext::IterationStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<MParser::ExpressionContext *> MParser::IterationStatementContext::expression() {
  return getRuleContexts<MParser::ExpressionContext>();
}

MParser::ExpressionContext* MParser::IterationStatementContext::expression(size_t i) {
  return getRuleContext<MParser::ExpressionContext>(i);
}

MParser::StatementContext* MParser::IterationStatementContext::statement() {
  return getRuleContext<MParser::StatementContext>(0);
}

MParser::VariableDeclarationContext* MParser::IterationStatementContext::variableDeclaration() {
  return getRuleContext<MParser::VariableDeclarationContext>(0);
}


size_t MParser::IterationStatementContext::getRuleIndex() const {
  return MParser::RuleIterationStatement;
}

void MParser::IterationStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIterationStatement(this);
}

void MParser::IterationStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIterationStatement(this);
}


antlrcpp::Any MParser::IterationStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<MVisitor*>(visitor))
    return parserVisitor->visitIterationStatement(this);
  else
    return visitor->visitChildren(this);
}

MParser::IterationStatementContext* MParser::iterationStatement() {
  IterationStatementContext *_localctx = _tracker.createInstance<IterationStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, MParser::RuleIterationStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(129);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(95);
      match(MParser::While);
      setState(96);
      match(MParser::LParen);
      setState(97);
      expression(0);
      setState(98);
      match(MParser::RParen);
      setState(99);
      statement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      match(MParser::For);
      setState(102);
      match(MParser::LParen);
      setState(103);
      dynamic_cast<IterationStatementContext *>(_localctx)->declinit = variableDeclaration();
      setState(105);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << MParser::New)
        | (1ULL << MParser::Plus)
        | (1ULL << MParser::Minus)
        | (1ULL << MParser::Not)
        | (1ULL << MParser::Tilde)
        | (1ULL << MParser::PlusPlus)
        | (1ULL << MParser::MinusMinus)
        | (1ULL << MParser::LParen)
        | (1ULL << MParser::NullLiteral)
        | (1ULL << MParser::BoolConstant)
        | (1ULL << MParser::IntegerConstant)
        | (1ULL << MParser::StringLiteral)
        | (1ULL << MParser::Identifier))) != 0)) {
        setState(104);
        dynamic_cast<IterationStatementContext *>(_localctx)->cond = expression(0);
      }
      setState(107);
      match(MParser::Semi);
      setState(109);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << MParser::New)
        | (1ULL << MParser::Plus)
        | (1ULL << MParser::Minus)
        | (1ULL << MParser::Not)
        | (1ULL << MParser::Tilde)
        | (1ULL << MParser::PlusPlus)
        | (1ULL << MParser::MinusMinus)
        | (1ULL << MParser::LParen)
        | (1ULL << MParser::NullLiteral)
        | (1ULL << MParser::BoolConstant)
        | (1ULL << MParser::IntegerConstant)
        | (1ULL << MParser::StringLiteral)
        | (1ULL << MParser::Identifier))) != 0)) {
        setState(108);
        dynamic_cast<IterationStatementContext *>(_localctx)->step = expression(0);
      }
      setState(111);
      match(MParser::RParen);
      setState(112);
      statement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(114);
      match(MParser::For);
      setState(115);
      match(MParser::LParen);
      setState(117);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << MParser::New)
        | (1ULL << MParser::Plus)
        | (1ULL << MParser::Minus)
        | (1ULL << MParser::Not)
        | (1ULL << MParser::Tilde)
        | (1ULL << MParser::PlusPlus)
        | (1ULL << MParser::MinusMinus)
        | (1ULL << MParser::LParen)
        | (1ULL << MParser::NullLiteral)
        | (1ULL << MParser::BoolConstant)
        | (1ULL << MParser::IntegerConstant)
        | (1ULL << MParser::StringLiteral)
        | (1ULL << MParser::Identifier))) != 0)) {
        setState(116);
        dynamic_cast<IterationStatementContext *>(_localctx)->init = expression(0);
      }
      setState(119);
      match(MParser::Semi);
      setState(121);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << MParser::New)
        | (1ULL << MParser::Plus)
        | (1ULL << MParser::Minus)
        | (1ULL << MParser::Not)
        | (1ULL << MParser::Tilde)
        | (1ULL << MParser::PlusPlus)
        | (1ULL << MParser::MinusMinus)
        | (1ULL << MParser::LParen)
        | (1ULL << MParser::NullLiteral)
        | (1ULL << MParser::BoolConstant)
        | (1ULL << MParser::IntegerConstant)
        | (1ULL << MParser::StringLiteral)
        | (1ULL << MParser::Identifier))) != 0)) {
        setState(120);
        dynamic_cast<IterationStatementContext *>(_localctx)->cond = expression(0);
      }
      setState(123);
      match(MParser::Semi);
      setState(125);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if ((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << MParser::New)
        | (1ULL << MParser::Plus)
        | (1ULL << MParser::Minus)
        | (1ULL << MParser::Not)
        | (1ULL << MParser::Tilde)
        | (1ULL << MParser::PlusPlus)
        | (1ULL << MParser::MinusMinus)
        | (1ULL << MParser::LParen)
        | (1ULL << MParser::NullLiteral)
        | (1ULL << MParser::BoolConstant)
        | (1ULL << MParser::IntegerConstant)
        | (1ULL << MParser::StringLiteral)
        | (1ULL << MParser::Identifier))) != 0)) {
        setState(124);
        dynamic_cast<IterationStatementContext *>(_localctx)->step = expression(0);
      }
      setState(127);
      match(MParser::RParen);
      setState(128);
      statement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- JumpStatementContext ------------------------------------------------------------------

MParser::JumpStatementContext::JumpStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

MParser::ExpressionContext* MParser::JumpStatementContext::expression() {
  return getRuleContext<MParser::ExpressionContext>(0);
}


size_t MParser::JumpStatementContext::getRuleIndex() const {
  return MParser::RuleJumpStatement;
}

void MParser::JumpStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<MListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterJumpStatement(this);
}
